fix: prevent full height sections overlapping on small screens

--- a/app/css/styles.scss
+++ b/app/css/styles.scss
@@ -1015,7 +1015,7 @@ figure.wide-img {
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1000px) and (min-height: 800px){
   html{
     font-size: 24px;
   }
